// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserInfo /> should render a user picture 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 4.1rem auto auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.5rem;
  background: rgba(0,0,0,0.2);
  border-top: 1px solid hsl(213,17%,20%);
  border-bottom: 1px solid hsl(213,17%,20%);
  color: hsl(0,100%,100%);
  font-size: 1.4rem;
  cursor: pointer;
}

@media (min-width:0em) and (max-width:35.9375em) {
  .c0 {
    display: none;
  }
}

@media (min-width:36em) and (max-width:61.9375em) {
  .c0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    grid-template-columns: auto;
    grid-template-rows: 4.1rem 5rem;
  }
}

<div
  className="c0"
>
  <Styled(Avatar)
    name="Tony Starck"
    src="http://pictureSrc.com"
  />
  <styled.span>
    Tony Starck
  </styled.span>
  <styled.div
    data-test="DisconnectWrapper-test"
    onClick={[Function]}
  >
    <Styled(Icon)
      color="white"
      name="power-off"
    />
  </styled.div>
</div>
`;

exports[`<UserInfo /> should render withouth a problem 1`] = `
.c0 {
  display: grid;
  grid-template-columns: 4.1rem auto auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 1.5rem;
  background: rgba(0,0,0,0.2);
  border-top: 1px solid hsl(213,17%,20%);
  border-bottom: 1px solid hsl(213,17%,20%);
  color: hsl(0,100%,100%);
  font-size: 1.4rem;
  cursor: pointer;
}

@media (min-width:0em) and (max-width:35.9375em) {
  .c0 {
    display: none;
  }
}

@media (min-width:36em) and (max-width:61.9375em) {
  .c0 {
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    grid-template-columns: auto;
    grid-template-rows: 4.1rem 5rem;
  }
}

<div
  className="c0"
>
  <Styled(Avatar)
    name="Tony Starck"
    src={null}
  />
  <styled.span>
    Tony Starck
  </styled.span>
  <styled.div
    data-test="DisconnectWrapper-test"
    onClick={[Function]}
  >
    <Styled(Icon)
      color="white"
      name="power-off"
    />
  </styled.div>
</div>
`;
